refactor: deque 로 덱 개선